--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <body>
   <p>Bora testar</p>
   <!-- Project -->
-  <script src="main.js"></script>
+  <script src="variaveis.js"></script>
 </body>
 </html>
