mudei mais coisas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <p>Bora testar   </br> Bora mesmo, de novo  </p>
+  <p>Bora testar   </br> esse muda automaticamente  </p>
   <!-- Project -->
   <script src="variaveis.js"></script>
 </body>
