--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <body>
   <p>Bora testar   </br> esse muda automaticamente  </p>
   <!-- Project -->
-  <script src="variaveis.js"></script>
+  <script src="semana1.js"></script>
 </body>
 </html>
