Alterações da semana 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <p>Bora testar   </br> esse muda automaticamente  </p>
+  <p><h2>Quero testar</h2>  </br> <h4>se esse muda automaticamente</h4>  </p>
   <!-- Project -->
   <script src="semana1.js"></script>
 </body>
